traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:4: error: not found: value Direction
    case true if getDirection()==Direction.EST => droite();avance();droite()
                                 ^